# mebyfrac

./: Cargo.toml  Dockerfile  README.md  make_random_seq.py  operations.py  test.py
data/: data.txt  full_ecoli_report.txt  kcounts_ecoli.txt  kcounts_ecoli_3.txt  kcounts_random.txt  kcounts_random1_5.txt  kcounts_random1i_5.txt  kcounts_random2_3.txt  kcounts_random2_5.txt  kcounts_random_3.txt  kcounts_randombias2_5.txt  kcounts_randombias2_6.txt  kcounts_randombias_5.txt  kcounts_rbac.txt  kcounts_xfast_5.txt  random1.fa  random1_winv.fa  random_AAATTTCCG.fa  random_bacteria.fa  random_bias2.fa
scripts/: calc_gcpct.py  kmer.py  make_random_changes.py  make_random_seq.py  test.py
src/: main.rs
